--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -10,6 +10,7 @@ jobs:
     
     build-node:
         runs-on: ubuntu-latest
+        needs: say-hello
         strategy:
             matrix:
                 node-version: [18.x, 20.x]
