--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -25,3 +25,21 @@ jobs:
             - run: npm ci
             - run: npm run build --if-present
             - run: npm test
+    
+    deploy-dev:
+        runs-on: ubuntu-latest
+        needs: build-node
+        steps:
+            - run: echo "deploy to Dev"  
+    
+    deploy-uat:
+        runs-on: ubuntu-latest
+        needs: build-node
+        steps:
+            - run: echo "deploy to UAT"  
+
+    deploy-prod:
+        runs-on: ubuntu-latest
+        needs: deploy-uat
+        steps:
+            - run: echo "deploy to Prod"  
