--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -29,17 +29,20 @@ jobs:
     deploy-dev:
         runs-on: ubuntu-latest
         needs: build-node
+        environment: dev
         steps:
             - run: echo "deploy to Dev"  
     
     deploy-uat:
         runs-on: ubuntu-latest
         needs: build-node
+        environment: uat
         steps:
             - run: echo "deploy to UAT"  
 
     deploy-prod:
         runs-on: ubuntu-latest
         needs: deploy-uat
+        environment: prod
         steps:
             - run: echo "deploy to Prod"  
