--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -49,3 +49,8 @@ jobs:
         environment: prod
         steps:
             - run: echo "deploy to Prod"  
+    
+    call-workflow-reusable-cd:
+        uses: ./.github/workflows/reusable-cd.yml
+        with:
+            test-input-variable: "passed variable value"
