--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -34,21 +34,21 @@ jobs:
         needs: build-node
         environment: dev
         steps:
-            - run: echo "deploy to Dev"  
+            - run: echo "deploy to Dev ${{ env.TEST_APP_SERVICE_NAME}}"  
     
     deploy-uat:
         runs-on: ubuntu-latest
         needs: build-node
         environment: uat
         steps:
-            - run: echo "deploy to UAT"  
+            - run: echo "deploy to UAT ${{ env.TEST_APP_SERVICE_NAME}}"  
 
     deploy-prod:
         runs-on: ubuntu-latest
         needs: deploy-uat
         environment: prod
         steps:
-            - run: echo "deploy to Prod"  
+            - run: echo "deploy to Prod ${{ env.TEST_APP_SERVICE_NAME}}"  
     
     call-workflow-reusable-cd:
         uses: ./.github/workflows/reusable-cd.yml
